syntax = "proto3";

package skopa.common;

message User {
    uint32 id = 1;
    string username = 2;
    string email = 3;
    optional string password = 4;
    string created_at = 6;
    string updated_at = 7;
    optional string phone = 8;
    optional string email_verified_at = 9;
    optional string source = 10;
    optional UserDetails details = 11;
    repeated User contacts = 12;
}

message UserDetails {
    string  first_name = 1;
    string  last_name = 2;
    string  date_of_birth = 3;
    string  city = 4;
    string  street = 5;
    uint32  postal_code = 6;
    uint32  tax_id_number = 7;
    string region = 8;
    optional uint32 send_type = 9;
}

message IdRequest {
    uint32 id = 1;
}

message SuccessResponse {
    bool success = 1;
  }